# hw05_final

./: .env.example  .flake8  .gitignore  .python-version  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
core/: views.py
posts/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0002_group.py  0003_post_group.py  0004_post_image.py  0005_comment.py  0009_auto_20200730_0708.py  0010_auto_20200809_1345.py
posts/static/css/: bootstrap.min.css  font-awesome.min.css  style.css
posts/static/js/: debug.bootstrap.grid.js  jquery.scrollUp.min.js
posts/static/posts/css/: style.css
posts/views/: comments.py  follow.py  groups.py  posts.py  profile.py
src/: manage.py
src/apps/posts/: admin.py  forms.py  mixins.py  tests.py  urls.py
src/apps/posts/migrations/: 0001_initial.py  0006_auto_20200722_2308.py  0007_auto_20200727_0947.py  0008_auto_20200727_1011.py  0011_auto_20200809_1349.py
src/apps/posts/views/: comments.py  follow.py  groups.py  posts.py  profile.py
src/apps/users/: urls.py  views.py
src/config/: settings.py  urls.py
src/templates/: base.html
src/templates/misc/: 404.html  500.html
src/templates/posts/: follow.html  group.html  index.html  post.html
src/templates/posts/includes/: comments.html  menu.html
src/templates/users/: base.html  password_reset_done.html
templates/: base.html  follow.html  group.html  index.html  new_post.html  post.html  profile.html
templates/includes/: author_block.html  comments.html  footer.html  menu.html  nav.html  paginator.html  post_item.html  sidebar.html
templates/misc/: 404.html  500.html
templates/posts/: new_post.html  profile.html
templates/posts/includes/: author_block.html  comments.html  post_item.html
templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  signup.html
templates/users/includes/: form.html
tests/: test_comment.py  test_follow.py  test_homework.py  test_new.py  test_post.py
tests/fixtures/: fixture_data.py
users/: urls.py  views.py
users/templates/: signup.html
users/templates/registration/: password_change_form.html  password_reset_confirm.html  password_reset_form.html
yatube/: settings.py  urls.py
