[tool.poetry]
name = "yatube"
version = "0.1.0"
description = "Социальная сеть для публикации личных дневников"
authors = ["Denis S. <makafonov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.20"
pytest-django = "3.8.0"
sorl-thumbnail = "12.6.3"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"
wemake-python-styleguide = "^0.15.2"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
