[tool.poetry]
name = "yatube"
version = "0.1.0"
description = "Социальная сеть для публикации личных дневников"
authors = ["Denis S. <makafonov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2"
sorl-thumbnail = "^12.6"
Pillow = "^9.2"
python-dotenv = "^0.17"

[tool.poetry.dev-dependencies]
rope = "^0.19"
wemake-python-styleguide = "^0.17"
yapf = "^0.31"
django-debug-toolbar = "^3.2"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-django = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "yatube.settings"
norecursedirs = ".git __pycache__ .venv"
addopts = "-vv -p no:cacheprovider --strict-markers"
testpaths = "tests/"
python_files = "test_*.py"

[tool.coverage.run]
branch = true
